# tailcall

./: Cargo.toml
.github/: labeler.yml
.github/workflows/: bot.yml  ci.yml  label.yml  labeler.yml  pr-convention.yml
benches/: data_loader_bench.rs
src/http/: client.rs  mod.rs  request_handler.rs
src/http/req_resp/: error.rs  mod.rs  request.rs  response.rs
src/http/request_handlers/: graphql_request.rs  mod.rs
src/http/request_handlers/api_request_handlers/: api_request.rs  handler.rs  mod.rs
src/http/wasm_cache/: cache.rs  middleware.rs  mod.rs
tc_cli/: Cargo.toml
tc_cli/src/cli/: tc.rs
tc_core/: Cargo.toml
tc_core/src/blueprint/: blueprint.rs
tc_core/src/config/: reader.rs  writer.rs
tc_core/src/grpc/: request.rs
tc_core/src/http/: data_loader.rs  response.rs
tc_core/src/http/client/: client.rs  client_cli.rs  client_wasm.rs  mod.rs
tc_core/src/lambda/: expression.rs
tests/: http_spec.rs
workers/: Cargo.toml  package.json
workers/src/: lib.rs  request.rs  response.rs
